test/corpus/commands.txt
==================
commands
==================

:assign c 60
:play foo
:tempo 120
:timesig 4 4
:velocity 100
:channel 1
:program 1
:control 1 1
:start
:stop

---

    (source_file
      (decl_list
        (command
          (char)
          (uint))
        (command
          (ident))
        (command
          (uint))
        (command
          (uint)
          (uint))
        (command
          (uint))
        (command
          (uint))
        (command
          (uint))
        (command
          (uint)
          (uint))
        (command)
        (command)))

==================
commands empty lines
==================

:assign c 60

:assign c 60

---

    (source_file
      (decl_list
        (command
          (char)
          (uint))
        (command
          (char)
          (uint))))
