test/corpus/comments.txt
==================
line comment
==================

// This is a line comment.
:assign c 60

---

    (source_file
      (comment)
      (decl_list
        (decl
          (command
            (char)
            (uint)))))

==================
single line block comment
==================

/* This is a single line block comment. */
:assign c 60

---

    (source_file
      (comment)
      (decl_list
        (decl
          (command
            (char)
            (uint)))))

==================
multi line block comment
==================

/**********************************
This is a multi line block comment.
**********************************/
:assign c 60

---

    (source_file
      (comment)
      (decl_list
        (decl
          (command
            (char)
            (uint)))))
